--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+body {
+    background-image: url("../img/abstract-watercolor-texture-background-vector_1055-9115.jpeg");
+    background-color: #cccccc;
+   }
+
 header, nav, footer, section, article, aside {
     border: 1px solid rgb(62, 60, 66);
     background-color: burlywood;
